# gpt-oss-20b-redteaming

./: LICENSE  README.md  pyproject.toml
